--- a/final.css
+++ b/final.css
@@ -140,6 +140,7 @@ button {
       border-top: solid 3px hsl(16, 100%, 30%);
       border-bottom-width: 0px;
       bottom: -3px;
+      border: none;
     }
 
 
