--- a/sandbox.css
+++ b/sandbox.css
@@ -218,3 +218,70 @@
       border-right-style: none;
       color: white;
     }
+
+/* =========================
+   ANIMATED BUTTONS
+   ========================= */
+
+   .animated-button-1 {
+     position: relative;
+     display: inline-block;
+     padding: 20px 40px;
+     font-size: 1.4rem;
+     background-color: #00b3b4;
+     background-image: url(pattern.png);
+     background-size: 40px 40px;
+     border: 1px solid #555;
+     color: white;
+     transition: all 0.3s ease;
+   }
+    .animated-button-1:hover {
+      -webkit-animation: loading-button-animation 2s linear infinite;
+      animation: loading-button-animation 2s linear infinite;
+    }
+    @-webkit-keyframes
+    loading-button-animation{
+      from {
+        background-position: 0 0;
+      }
+      to {
+        background-position: 40px 0;
+      }
+    }
+    @keyframes
+    loading-button-animation{
+      from {
+        background-position: 0 0;
+      }
+      to {
+        background-position: 40px 0;
+      }
+    }
+
+.animated-button-2 {
+  position: relative;
+  display: inline-block;
+  padding: 20px 40px;
+  font-size: 1.4rem;
+  background-color: #00b3b4;
+  border: 1px solid #555;
+  color: white;
+  transition: all 0.3s ease;
+}
+  .animated-button-2:after {
+    position: absolute;
+    content: "»";
+    top: 50%;
+    right: 0.6em;
+    opacity: 0;
+    transition: all 0.3s ease;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+  }
+  .animated-button-2:hover{
+    padding: 20px 60px 20px 20px;
+  }
+  .animated-button-2:hover:after{
+    right: 1.5em;
+    opacity: 1;
+  }
