--- a/sandbox.css
+++ b/sandbox.css
@@ -285,3 +285,95 @@
     right: 1.5em;
     opacity: 1;
   }
+
+/*  TOGGLE SWITCH UI BUTTONS */
+
+.toggle-1 {
+  font-family: Helvetica, Arial, sans-serif;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 15px 0 0;
+}
+.toggle-1__input {
+  display: none;
+}
+.toggle-1__button {
+  position: relative;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  background-color: #f2395a;
+  color: #fff;
+  height: 30px;
+  width: 80px;
+  border: 1px solid #f2395a;
+  cursor: pointer;
+}
+.toggle-1__button::before{
+  position: absolute;
+  content: "off";
+  top: 5px;
+  left: 40px;
+  right: auto;
+  display: inline-block;
+  height: 20px;
+  padding: 0 3px;
+  background-color: #fff;
+  color: #f2395a;
+  transition: all 0.3s ease;
+}
+
+.toggle-1__input:checked + .toggle-1__button {
+  background-color: #00b3b4;
+  border: 1px solid #00b3b4;
+}
+.toggle-1__input:checked + .toggle-1__button::before {
+  left: 5px;
+  content: "on";
+  color: #00b3b4;
+}
+
+.toggle-2 {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 0.8rem;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 15px 0 0;
+}
+.toggle-2__input {
+  display: none;
+}
+.toggle-2__button {
+  position: relative;
+  display: inline-block;
+  line-height: 20px;
+  text-transform: uppercase;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: #aaa;
+  padding: 5px 10px 3px 30px;
+  cursor: pointer;
+}
+.toggle-2__button::before {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: auto;
+  display: inline-block;
+  content: "";
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  transition: all 0.3s ease;
+  border-radius: 100%;
+}
+.toggle-2__input:checked + .toggle-2__button {
+  background-color: #00b3b4;
+  border-color: #00b3b4;
+  color: #fff;
+}
+
+.toggle-2__input:checked + .toggle-2__button::before {
+  background-color: #fff;
+}
